# user-management

./: .gitignore  .pre-commit-config.yaml  docker-compose.yaml
.github/workflows/: main.yml
user_management/: Dockerfile  alembic.ini  localstack-script.sh  pyproject.toml
user_management/logs/: logger.py  logging_config.yaml
user_management/migrations/: env.py
user_management/migrations/versions/: 099507c56e1a_is_blocked_default_false.py  15f7f0f7fa15_string_text.py  2604bb929dc2_email_isn_t_unique.py  2d6870df9d78_add_nullable.py  84660e6af245_initial.py  9f2b2985a96d_initial.py  e7222cd6ac0e_email_is_nullable.py
user_management/src/: abstract.py  config.py  database.py  di.py  exception_handlers.py  main.py  repository.py  routers.py
user_management/src/auth/: dependencies.py  exceptions.py  models.py  router.py  service.py  utils.py
user_management/src/users/: dependencies.py  enums.py  exc_handlers.py  exceptions.py  models.py  permissions.py  repository.py  router.py  schemas.py  service.py  utils.py
user_management/tests/: conftest.py
user_management/tests/auth/: test_dependencies.py  test_endpoints.py
user_management/tests/users/: test_first.py  test_users_endpoints.py  user_fixtures.py
